// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductListItem rendering tests ProductListItem - product BUNDLE - test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 shadow-sm p-4 bg-white border border-slate-300 rounded-lg hover:border-blue-500 hover:shadow-md transition-all"
    data-slot="card"
    data-testid="product-list-item"
  >
    <div
      class="flex flex-col sm:flex-row gap-4 items-start"
    >
      <div
        class="flex-1 min-w-0 space-y-2"
      >
        <div
          class="flex items-start gap-2 flex-wrap"
        >
          <h4
            class="font-medium text-slate-900 text-lg flex-1"
          >
            name 1
          </h4>
          <span
            class="text-xs px-2 py-0.5 rounded border bg-green-100 text-green-700 border-green-200"
          >
            BUNDLE
          </span>
        </div>
        <p
          class="text-sm text-slate-600 line-clamp-2"
        >
          description 1
        </p>
        <div
          class="flex flex-wrap items-center gap-3 text-xs text-slate-600"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
            >
              category 0
            </span>
            <span
              class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
            >
              category 1
            </span>
            <span
              class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
            >
              category 2
            </span>
          </div>
          <span
            class="flex items-center gap-1"
          >
            3 templates included
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-end gap-3 sm:min-w-[200px]"
      >
        <p
          class="text-2xl font-bold text-slate-900"
        >
          CHF 
          59.99
        </p>
        <div
          class="flex gap-2 w-full sm:w-auto"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
            data-slot="button"
            data-testid="view-details-btn"
            href="/products/334db648-f300-4284-8149-075ff465d751"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info w-4 h-4 sm:mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Details
            </span>
          </a>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 flex-1 cursor-pointer sm:flex-initial"
            data-slot="button"
            data-testid="add-to-cart-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart w-4 h-4 sm:mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Add
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductListItem rendering tests ProductListItem- product TEMPLATE - test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 shadow-sm p-4 bg-white border border-slate-300 rounded-lg hover:border-blue-500 hover:shadow-md transition-all"
    data-slot="card"
    data-testid="product-list-item"
  >
    <div
      class="flex flex-col sm:flex-row gap-4 items-start"
    >
      <div
        class="flex-1 min-w-0 space-y-2"
      >
        <div
          class="flex items-start gap-2 flex-wrap"
        >
          <h4
            class="font-medium text-slate-900 text-lg flex-1"
          >
            name 1
          </h4>
          <span
            class="text-xs px-2 py-0.5 rounded border bg-blue-100 text-blue-700 border-blue-200"
          >
            TEMPLATE
          </span>
        </div>
        <p
          class="text-sm text-slate-600 line-clamp-2"
        >
          description 1
        </p>
        <div
          class="flex flex-wrap items-center gap-3 text-xs text-slate-600"
        />
      </div>
      <div
        class="flex flex-col items-end gap-3 sm:min-w-[200px]"
      >
        <p
          class="text-2xl font-bold text-slate-900"
        >
          CHF 
          59.99
        </p>
        <div
          class="flex gap-2 w-full sm:w-auto"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
            data-slot="button"
            data-testid="view-details-btn"
            href="/products/334db648-f300-4284-8149-075ff465d751"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info w-4 h-4 sm:mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Details
            </span>
          </a>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 flex-1 cursor-pointer sm:flex-initial"
            data-slot="button"
            data-testid="add-to-cart-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart w-4 h-4 sm:mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Add
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
